# aind-exaspim-data-transformation

./: CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish_dev.yml  publish_main.yml  tag_and_publish.yml  test_and_lint.yml
docs/examples/: acquisition.json  test_airflow.py
docs/source/: conf.py
src/aind_exaspim_data_transformation/: __init__.py  imaris_job.py  models.py  upgrade_metadata.py
src/aind_exaspim_data_transformation/compress/: imaris_to_zarr.py  omezarr_metadata.py
src/aind_exaspim_data_transformation/utils/: io_utils.py  utils.py
tests/: test_downsample_pyramid.py  test_imaris_job.py  test_imaris_reader.py  test_imaris_to_zarr_parallel.py  test_imaris_to_zarr_writer.py  test_io_utils.py  test_live_ims_to_zarr.py  test_models.py  test_omezarr_metadata.py  test_translation_fix.py  test_upgrade_metadata.py  test_utils.py
