[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-exaspim-data-transformation"
description = "An imaris to zarr data transformation tool for ExaSPIM data. Designed to be used in aind-data-transfer-service."
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "dask>=2024.0.0",
    "distributed==2026.1.1",
    "h5py>=3.0.0",
    "hdf5plugin>=4.0.0",
    "numpy>=1.20.0",
    "zarr>=2.13.0,<2.18.0",
    "ome-zarr>=0.8.0",
    "numcodecs==0.15.1",
    "aind-data-transformation>=0.1.0",
    "packaging>=21.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0", 
    "tensorstore==0.1.81",
    "psutil==7.2.2", 
    "boto3==1.42.36"
]

[tool.setuptools]
license-files = []

[dependency-groups]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'furo'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_exaspim_data_transformation.__version__"}

[tool.black]
line-length = 79
target_version = ['py312']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | .conda
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*", "tests/*"]
source = ["aind_exaspim_data_transformation"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "^from .* import .*",
    "^import .*",
    "pragma: no cover"
]
fail_under = 80

[tool.isort]
line_length = 79
profile = "black"
skip = [".conda"]

[tool.interrogate]
exclude = ["setup.py", "docs", "build", ".conda"]
fail-under = 80
